--- a/Owncloud iOs Client/Files/Preview/DetailView/DetailView.xib
+++ b/Owncloud iOs Client/Files/Preview/DetailView/DetailView.xib
@@ -86,6 +86,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="85">
+                    <rect key="frame" x="384" y="616" width="0.0" height="0.0"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
@@ -174,7 +175,6 @@
                 <constraint firstAttribute="trailing" secondItem="63" secondAttribute="trailing" id="1e3-ov-4hM"/>
                 <constraint firstItem="63" firstAttribute="leading" secondItem="8" secondAttribute="leading" id="1tP-NB-mJ5"/>
                 <constraint firstItem="112" firstAttribute="leading" secondItem="8" secondAttribute="leading" id="26q-qR-A3X"/>
-                <constraint firstItem="85" firstAttribute="top" secondItem="82" secondAttribute="bottom" constant="-596" id="3PW-AE-3Hz"/>
                 <constraint firstAttribute="centerY" secondItem="80" secondAttribute="centerY" constant="10" id="3Sq-kx-drL"/>
                 <constraint firstAttribute="centerY" secondItem="82" secondAttribute="centerY" constant="-83" id="3hY-dZ-W3e"/>
                 <constraint firstAttribute="trailing" secondItem="BV7-Lz-cFn" secondAttribute="trailing" constant="210" id="4g2-Br-Gll"/>
@@ -183,22 +183,23 @@
                 <constraint firstItem="RhM-9d-K2q" firstAttribute="top" secondItem="63" secondAttribute="bottom" priority="999" constant="16" id="7Jg-Vd-3mY"/>
                 <constraint firstItem="82" firstAttribute="top" secondItem="80" secondAttribute="bottom" constant="28" id="7bH-w7-UjE"/>
                 <constraint firstAttribute="trailing" secondItem="112" secondAttribute="trailing" id="BhR-id-DyS"/>
-                <constraint firstAttribute="centerX" secondItem="85" secondAttribute="centerX" constant="384" id="C2r-2t-fGS"/>
                 <constraint firstAttribute="bottom" secondItem="112" secondAttribute="bottom" id="E2n-qO-LdM"/>
                 <constraint firstAttribute="centerX" secondItem="RhM-9d-K2q" secondAttribute="centerX" id="FdE-Oh-T1r"/>
                 <constraint firstAttribute="centerY" secondItem="83" secondAttribute="centerY" constant="-83" id="HPt-0F-QbD"/>
                 <constraint firstAttribute="centerX" secondItem="80" secondAttribute="centerX" id="O3M-bq-gO3"/>
                 <constraint firstItem="80" firstAttribute="centerX" secondItem="112" secondAttribute="centerX" id="R4W-5S-H3h"/>
+                <constraint firstItem="85" firstAttribute="top" secondItem="82" secondAttribute="bottom" constant="20" id="SPe-bS-tvY"/>
                 <constraint firstAttribute="centerX" secondItem="82" secondAttribute="centerX" constant="4" id="TbT-rI-qb9"/>
                 <constraint firstItem="BV7-Lz-cFn" firstAttribute="leading" secondItem="8" secondAttribute="leading" constant="2" id="Vsl-8p-I3W"/>
+                <constraint firstItem="85" firstAttribute="centerX" secondItem="8" secondAttribute="centerX" id="Wfw-54-bef"/>
                 <constraint firstItem="112" firstAttribute="top" secondItem="63" secondAttribute="bottom" id="Wo6-z4-XgU"/>
                 <constraint firstAttribute="trailing" secondItem="1eq-mt-JYf" secondAttribute="trailing" constant="210" id="dtc-mg-Qfz"/>
-                <constraint firstAttribute="centerY" secondItem="85" secondAttribute="centerY" constant="512" id="fcI-W2-MVH"/>
                 <constraint firstItem="RhM-9d-K2q" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8" secondAttribute="leading" priority="999" constant="16" id="ghr-kZ-Il6"/>
                 <constraint firstItem="BV7-Lz-cFn" firstAttribute="top" secondItem="8" secondAttribute="top" constant="10" id="jWd-pP-iNs"/>
                 <constraint firstItem="1eq-mt-JYf" firstAttribute="leading" secondItem="8" secondAttribute="leading" constant="2" id="nEk-l1-bFG"/>
                 <constraint firstItem="63" firstAttribute="top" secondItem="8" secondAttribute="top" id="wvX-GC-a9Z"/>
             </constraints>
+            <point key="canvasLocation" x="-145.3125" y="-12.3046875"/>
         </view>
     </objects>
     <resources>
